UtahLiveDataTest/src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>USBEProgramCode__c</fullName>
        <label>USBE Program Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>18PPA</fullName>
                </value>
                <value>
                    <fullName>18PPB</fullName>
                </value>
                <value>
                    <fullName>18PPBG</fullName>
                </value>
                <value>
                    <fullName>18PPM</fullName>
                </value>
                <value>
                    <fullName>18PPC</fullName>
                </value>
                <value>
                    <fullName>18PPCO</fullName>
                </value>
                <value>
                    <fullName>18PPD</fullName>
                </value>
                <value>
                    <fullName>18PPE</fullName>
                </value>
                <value>
                    <fullName>18PPF</fullName>
                </value>
                <value>
                    <fullName>18PPG</fullName>
                </value>
                <value>
                    <fullName>18PPH</fullName>
                </value>
                <value>
                    <fullName>18PPI</fullName>
                </value>
                <value>
                    <fullName>18PPN</fullName>
                </value>
                <value>
                    <fullName>18PP0</fullName>
                </value>
                <value>
                    <fullName>18PPP</fullName>
                </value>
                <value>
                    <fullName>18PPK</fullName>
                </value>
                <value>
                    <fullName>18PPKA</fullName>
                </value>
                <value>
                    <fullName>18PPKB</fullName>
                </value>
                <value>
                    <fullName>18PPKC</fullName>
                </value>
                <value>
                    <fullName>18PPKD</fullName>
                </value>
                <value>
                    <fullName>18PPKE</fullName>
                </value>
                <value>
                    <fullName>18PPKF</fullName>
                </value>
                <value>
                    <fullName>18PPL</fullName>
                </value>
                <value>
                    <fullName>18PQB</fullName>
                </value>
                <value>
                    <fullName>18PQC</fullName>
                </value>
                <value>
                    <fullName>18PQY</fullName>
                </value>
                <value>
                    <fullName>18PUN</fullName>
                </value>
                <value>
                    <fullName>18PUJ</fullName>
                </value>
                <value>
                    <fullName>18PUJG</fullName>
                </value>
                <value>
                    <fullName>18PQHG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitCode__c</fullName>
        <label>Unit Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0100</fullName>
                </value>
                <value>
                    <fullName>0101</fullName>
                </value>
                <value>
                    <fullName>0102</fullName>
                </value>
                <value>
                    <fullName>0103</fullName>
                </value>
                <value>
                    <fullName>0200</fullName>
                </value>
                <value>
                    <fullName>0221</fullName>
                </value>
                <value>
                    <fullName>0222</fullName>
                </value>
                <value>
                    <fullName>0223</fullName>
                </value>
                <value>
                    <fullName>0231</fullName>
                </value>
                <value>
                    <fullName>0300</fullName>
                </value>
                <value>
                    <fullName>0400</fullName>
                </value>
                <value>
                    <fullName>0440</fullName>
                </value>
                <value>
                    <fullName>0441</fullName>
                </value>
                <value>
                    <fullName>0442</fullName>
                </value>
                <value>
                    <fullName>0443</fullName>
                </value>
                <value>
                    <fullName>0444</fullName>
                </value>
                <value>
                    <fullName>0500</fullName>
                </value>
                <value>
                    <fullName>0600</fullName>
                </value>
                <value>
                    <fullName>0660</fullName>
                </value>
                <value>
                    <fullName>0661</fullName>
                </value>
                <value>
                    <fullName>0662</fullName>
                </value>
                <value>
                    <fullName>0663</fullName>
                </value>
                <value>
                    <fullName>0664</fullName>
                </value>
                <value>
                    <fullName>0665</fullName>
                </value>
                <value>
                    <fullName>0666</fullName>
                </value>
                <value>
                    <fullName>0667</fullName>
                </value>
                <value>
                    <fullName>0668</fullName>
                </value>
                <value>
                    <fullName>0669</fullName>
                </value>
                <value>
                    <fullName>0670</fullName>
                </value>
                <value>
                    <fullName>0681</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the for the unit lookup for program coding block.</description>
        <label>Unit Lookup</label>
        <referenceTo>r_unit__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MinimumSchoolProgramBasic</fullName>
                </value>
                <value>
                    <fullName>PEDOFFICEOFSUPERINTENDENT</fullName>
                </value>
                <value>
                    <fullName>IndirectCostPool</fullName>
                </value>
                <value>
                    <fullName>PEDOFFICEOFDIRECTORUSOR</fullName>
                </value>
                <value>
                    <fullName>MinimumSchoolProgramRelatedtoBasic</fullName>
                </value>
                <value>
                    <fullName>UtahStateBoardofEducation</fullName>
                </value>
                <value>
                    <fullName>InternalAudit</fullName>
                </value>
                <value>
                    <fullName>PEDCLEARING</fullName>
                </value>
                <value>
                    <fullName>PEDUSBEPRIORITIES</fullName>
                </value>
                <value>
                    <fullName>VotedandBoardLeeway</fullName>
                </value>
                <value>
                    <fullName>CapitalOutlay</fullName>
                </value>
                <value>
                    <fullName>PEDSTATEWIDEONLINEEDUCATION</fullName>
                </value>
                <value>
                    <fullName>FinancialOperations</fullName>
                </value>
                <value>
                    <fullName>PEDSUPERINTENDENTBUSINESSSERVICES</fullName>
                </value>
                <value>
                    <fullName>InformationTechnology</fullName>
                </value>
                <value>
                    <fullName>PEDSTUDIOINFORMATIONTECHNOLOGY</fullName>
                </value>
                <value>
                    <fullName>RegionalServiceCenters</fullName>
                </value>
                <value>
                    <fullName>FederalMineralLease</fullName>
                </value>
                <value>
                    <fullName>STUDENTACCESSTOHIGHQUALITYSCHOOL</fullName>
                </value>
                <value>
                    <fullName>Teaching&amp;Learning</fullName>
                </value>
                <value>
                    <fullName>Career&amp;TechnicalEducation</fullName>
                </value>
                <value>
                    <fullName>PEDISTECHNOLOGY</fullName>
                </value>
                <value>
                    <fullName>StudentAdvocacyServices</fullName>
                </value>
                <value>
                    <fullName>Law&amp;Legislation</fullName>
                </value>
                <value>
                    <fullName>PEDISDRIVER&apos;SED&amp;PRIVATE</fullName>
                </value>
                <value>
                    <fullName>PEDISEDUCATORLICENSINGFEESUPPORTED</fullName>
                </value>
                <value>
                    <fullName>PEDFEDERAL&amp;SPECIALPROGRAMS</fullName>
                </value>
                <value>
                    <fullName>PEDISMATHTEACHERTRAINING</fullName>
                </value>
                <value>
                    <fullName>PEDPILOTTEACHERRETENTIONGRANTPROG</fullName>
                </value>
                <value>
                    <fullName>PEDISEDUCATORLICENSING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserProfileName__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in User Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsesAndUseRestrictions__c</fullName>
        <label>Uses And Use Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebsiteAddress__c</fullName>
        <label>Website Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ownerOrg__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>External</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>OrganizationName__c</columns>
        <columns>ProgramCFDA__c</columns>
        <columns>FormulaandMatchingRequirements__c</columns>
        <columns>FundedAmount__c</columns>
        <columns>FunderType__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ORGName1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.ExternalProgram</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>4/10/2017 12:00 AM</value>
        </filters>
        <label>External</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NGO</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>InternalUniqueID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ProgramName__c</columns>
        <columns>PointOfContact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Administration__c</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.NGOProgram</value>
        </filters>
        <label>NGO</label>
    </listViews>
    <listViews>
        <fullName>With_Email_tmep</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>InternalUniqueID__c</columns>
        <columns>EmailTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EmailTemplate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>With Email tmep</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>ExternalProgram</fullName>
        <active>true</active>
        <description>Federal Program Type captures all federal Programs Information</description>
        <label>External Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>InternalProgram</fullName>
        <active>true</active>
        <description>This Record type stores all State Program Information</description>
        <label>Internal Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGOProgram</fullName>
        <active>true</active>
        <description>Programs which are sponsored by the non Federal Agencies</description>
        <label>NGO Program</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Family__c</fullName>
        <label>Family</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Guest__c</fullName>
        <label>Guest</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Home__c</fullName>
        <label>Home</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharingForEXE__c</fullName>
        <label>Sharing For EXE</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharingforReviewandApproval__c</fullName>
        <label>SharingforReviewandApproval</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Sibling__c</fullName>
        <label>Sibling</label>
    </sharingReasons>
    <validationRules>
        <fullName>Applicant_Type_Other_value</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK( OtherEligibleApplicantTypes__c ),
Includes(EligibleApplicantTypes__c,&quot;Other&quot;))</errorConditionFormula>
        <errorMessage>Eligible Applicant Type: Please enter other value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Project_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  RecordType.DeveloperName =&apos;InternalProgram&apos;  ,
EndDate__c &lt;= TODAY()
)</errorConditionFormula>
        <errorMessage>Project Period End Date should be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Project_Start_Date_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  RecordType.DeveloperName =&apos;InternalProgram&apos;  ,
StartDate__c &lt;= TODAY()
)</errorConditionFormula>
        <errorMessage>Project Period Start Date should be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_must_be_after_the_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &gt;  EndDate__c</errorConditionFormula>
        <errorMessage>Project Period Start Date must be before the Project Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pathway_Review_Validations</fullName>
        <active>true</active>
        <description>MSP and Lump-Sum-No-App pathways must have no review step process, while other pathways must have a 1 step review process.</description>
        <errorConditionFormula>IF(Account__r.Name == &apos;USBE&apos;, OR(IF(AND(OR(ISPICKVAL(ProgramPathway__c, &apos;MSP&apos;), ISPICKVAL(ProgramPathway__c,&apos;Lump-Sum-No-App&apos;)), ISPICKVAL(ReviewProcess__c, &apos;One step review&apos;)), TRUE, FALSE), IF(AND(NOT(OR(ISPICKVAL(ProgramPathway__c, &apos;MSP&apos;), ISPICKVAL(ProgramPathway__c,&apos;Lump-Sum-No-App&apos;))), ISPICKVAL(ReviewProcess__c, &apos;No Review&apos;)), TRUE, FALSE)), FALSE)</errorConditionFormula>
        <errorMessage>MSP and Lump-Sum-No-App pathways must have no review step process, while other pathways must have a 1 step review process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Key_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(ProgramKey__c, &quot;^[a-zA-Z0-9_]*$&quot;))</errorConditionFormula>
        <errorMessage>Program Key cannot contain spaces or symbols</errorMessage>
    </validationRules>
</CustomObject>